--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,12 @@ a{
 
 .channel-settings,.biography-settings{
     width: 480px;
-    margin-left: 10px;
+    margin-left: 37px;
     float:left;
+}
+
+.channel-settings{
+    margin-left:0;
 }
 
 .channel-settings-item{
@@ -46,15 +50,25 @@ a{
 
 .login-title-logout{
     margin-top: 10px;
+    margin-left: 30px;
     display: inline;
     float: right;
 }
 
 .header{
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.8);
     position: fixed;
     width: 100%;
     z-index: 49;
+    opacity:0.6;
+    transition:all .2s ease-in-out;
+    -webkit-transition:all .2s ease-in-out;
+}
+
+.header:hover{
+    opacity: .9;
+    transition:all .2s ease-in-out;
+    -webkit-transition:all .2s ease-in-out;
 }
 
 .nav-logo{
@@ -74,7 +88,7 @@ a{
 .nav-link{
     text-decoration: none;
     color: rgb(88, 68, 68);
-    padding: 15px 0px 13px 30px;
+    padding: 15px 0 13px 30px;
 }
 
 .countdowner{
@@ -87,6 +101,10 @@ a{
     height: 100vh;
 }
 
+.weakly-calendar-container{
+    height: 250px;
+}
+
 .biography{
     top:150px;
     margin: 0 auto;
@@ -94,8 +112,36 @@ a{
     position: relative;
 }
 
-.biography-text{
+.biography-text-title{
     font-size: 36px;
+}
+
+.biography-text,.info{
+    font-size: 20px;
+}
+
+.biography-text>p{
+    margin: 20px 0 20px 0;
+}
+
+.nav-menu-social{
+    margin: 0 15px 0 15px
+}
+
+.nav-menu-social>ul>li:hover{
+    background-color: rgba(255,255,255,0.9);
+    transition:all .2s ease-in-out;
+    -webkit-transition:all .2s ease-in-out;
+}
+
+.nav-menu-social-item{
+    padding: 8px 0 8px 0;
+    margin: 8px 0 8px 0;
+    font-size: 25px;
+}
+
+.nav-menu-social>ul>li{
+    padding: 10px 8px 9px 9px;
 }
 
 .channel-live-video,.channel-live-chat{
@@ -122,12 +168,21 @@ a{
     float:left;
     list-style-type: none;
     display: inline-flex;
-    padding-right: 30px;
+    padding: 0 15px 0 15px;;
+}
+
+.nav-menu>li:hover{
+    background-color: rgba(255,255,255,1);
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    -ms-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 .nav-menu-item{
     font-size: 25px;
-    padding: 30px 0px 30px 10px;
+    padding: 32px 0 31px 0;
 }
 
 .right{
